040228	Fix a couple of memory leaks in config file parsing. Fix llong.h
	(redefined same symbol twice)
030718	Fix rootskip and rate of XDF disks
030705	Fix inverted IS_MFORMAT_ONLY conditon in plain_io.c
030609	Moved putc after variable description (anybody knows about a -W
	flag so that gcc warns about these?)
030606	Fixed mattrib -p (missing slash)
030605	Added -m option to mformat to specify a non-standard mediabyte
030524	Added -d options to mformat to specify number of FAT copies. Can
	also be set using the MTOOLS_NFATS environmental variable.
	Also added similar env variable for root directory length
	Signed/unsigned fixes, to satisfy increased pickyness of gcc ;-)
	CYGWIN fixes for mcat
	floppyd bugfixes
030213	Released 3.9.9 : Identical to pre-3.9.9 except for the version number
030213	Released 3.9.9 Pre-1
	Fixed max numbers of sectors for FAT12 and FAT16 (was off by one...)
	Improved fat_len calculation
	Fixed plain_io.c bug (Swap byte applied after partition stuff,
	instead of before)
030118	Fixed mcat end-of-file bugs (mcat went on writing, and writing,
	and writing, even after end of file)
030105	If "standard" CHS specified, but non-standard root dir size do not
	use table-lookup based geometry ("old-dos media descriptor")
021118	David's new uz script, that can use commands other than gzip for
	compression
021116	Fixed vold support for mpartition
021105	Added PACKED to unicode_char declaration (Arm)
	Mpartition can now create the image if -I is specified.
021104	Support for geometry-less Atari disks
	Support for byte-swapping disks
021102b	Avoid .(l and .)l in generated man pages
021102	-i flag
	Fix mformat for 2m
	Fix [] wildcard off-by-one error
	Avoid overwriting (Unix) file by itself in mcopy
	Avoid cloberring any file if implicit target is used (the
	one-argument syntax of mcopy)
	Added Zip 750 entry to mzip.c
	SCO Scsi fix
020125	Fixes for cygwin
	Fixes in buffer.c for oddly sized image files