@@ -1,2 +1,2 @@
 const char *mversion="3.9.9";
-const char *mdate = "18 Jul 2003";
+const char *mdate = "28 Feb 2004";
