@@ -1,5 +1,8 @@
 040228	Fix a couple of memory leaks in config file parsing. Fix llong.h
 	(redefined same symbol twice)
+	Fix a variable initialization problem in plain_io.c
+	New mclasserase command to erase memory cards
+	C99 "compatibility" (cf http://www.mtools.linux.lu/download.html)
 030718	Fix rootskip and rate of XDF disks
 030705	Fix inverted IS_MFORMAT_ONLY conditon in plain_io.c
 030609	Moved putc after variable description (anybody knows about a -W
